--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,12 @@
-.card{
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container{
+    flex: 1;
+}
+/* .card{
     width: 300px;
     padding: 20px;
     background: #f5f5f5;
@@ -11,7 +19,7 @@ img{
     width: 100%;
     border-radius: 12px;
     object-fit: contain;
-}
+} */
 .location{
     display: flex;
     align-items: center;
@@ -21,10 +29,107 @@ h2,h3{
     text-align: center;
 }
 
-.description{
+.description, .card-text-home{
     display: -webkit-box !important;
     -webkit-line-clamp: 2 !important;
     -webkit-box-orient: vertical !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
+}
+a{
+    text-decoration: none;
+    color: #000;
+}
+
+.home{
+    font-size: 2.5rem;
+    color: #fe424d;
+}
+
+.navbar{
+    height: 5rem;
+    /* background: #fff;   */
+}
+.navbar-collapse{
+    background: #fff;
+}
+
+.nav-link{
+    font-size: 1.5rem !important;
+    color: black !important;
+    font-weight: 600 !important;
+}
+.nav-link:hover{
+    color: #fe424d !important;
+}
+
+
+/* --------------------------------------------------------Home page cart */
+
+.home-card{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+.card{
+    border: none !important;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    object-fit: cover !important;
+}
+
+.cb-home{
+    height: 230px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* ------------------------------------------------------> form */
+form{
+    padding: 24px 0;
+}
+label{
+    margin-bottom: 8px;
+}
+
+/* ----------------------------------------------------------> Footer */
+footer{
+    background: #d5d5d5;
+    padding: 15px 0;
+}
+.f-info-links a{
+    text-decoration: none;
+    color: black;
+    transition: all linear .4s;
+}
+.f-info-links a:hover{
+    text-decoration: underline;
+    color: #fe424d;
+}
+
+.f-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
+
+.f-info .social{
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+}
+
+.f-info .social i{
+    font-size: 1.5rem;
+}
+
+.view-price{
+    display: flex;
+    align-items: center;
+    column-gap: 24px;
 }
