--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,20 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add List</title>
-</head>
-<body>
-    <h2>Add List</h2>
+<% layout("/layout/boilerplate.ejs") %>
 
-    <form action="/" method="post">
-        <input type="text" name="listing[title]" placeholder="Enter Your title"> <br><br>
-        <textarea name="listing[description]" id="" placeholder="Enter Your description"></textarea><br><br>
-        <input type="number" name="listing[price]" placeholder="Enter Price"><br><br>
-        <input type="text" name="listing[location]" placeholder="Enter Your location"><br><br>
-        <input type="text" name="listing[country]" placeholder="Enter Your country"><br><br>
-        <button>add</button>
-    </form>
-</body>
-</html>
+    <body>
+        <div class="row">
+            <h2>Add List</h2>
+
+            <form class="col-lg-6 offset-lg-3" action="/" method="post">
+                <label for="title" class="from-label"> title</label><br>
+                <input type="text" name="listing[title]" class="form-control" placeholder="Enter Your title"> <br><br>
+                <label for="image" class="from-label"> Image Link</label><br>
+                <input type="text" name="listing[image]" placeholder="Enter Image Url" class="form-control"> <br><br>
+                <label for="description" class="from-label"> description</label><br>
+                <textarea name="listing[description]" id="" placeholder="Enter Your description"
+                    class="form-control"></textarea><br><br>
+                <label for="price" class="from-label"> price</label><br>
+                <input type="number" name="listing[price]" placeholder="Enter Price" class="form-control"><br><br>
+                <div class="row">
+                    <div class="col-md-6 ">
+                        <label for="location" class="from-label"> location</label><br>
+                        <input type="text" name="listing[location]" placeholder="Enter Your location"
+                            class="form-control">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="country" class="from-label"> country</label><br>
+                    <input type="text" name="listing[country]" placeholder="Enter Your country" class="form-control">
+                    </div>
+                </div>
+                <br><br>
+                <button class="btn btn-success">Add List</button>
+            </form>
+        </div>
+
+    </body>
