--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,19 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit</title>
-</head>
+<% layout("/layout/boilerplate.ejs") %>
+
 <body>
-    <h1>Edit List</h1>
-    <form action="/<%= list._id %>?_method=PUT" method="post">
-        <input type="text" name="listing[title]" value="<%= list.title %>"> <br><br>
-        <textarea type="text" name="listing[description]"> <%= list.description %> </textarea><br><br>
-        <input type="text" name="listing[price]" value="<%= list.price %>"><br><br>
-        <input type="text" name="listing[location]" value="<%= list.location %>"><br><br>
-        <input type="text" name="listing[country]" value="<%= list.country %>"><br><br>
-        <button>submit</button>
-    </form>
+    <div class="row">
+        <h2>Edit Listing</h2>
+
+        <form class="col-lg-6 offset-lg-3" action="/<%= list._id %>?_method=PUT" method="post">
+                <label for="title" class="from-label"> title</label><br>
+                <input type="text" name="listing[title]" class="form-control" value="<%= list.title %>"> <br><br>
+                <label for="image" class="from-label"> Image Link</label><br>
+                <input type="text" name="listing[image]" value="<%= list.image %>" class="form-control"> <br><br>
+                <label for="description" class="from-label"> description</label><br>
+                <textarea name="listing[description]" id="" 
+                    class="form-control"> <%= list.description %> </textarea><br><br>
+                <label for="price" class="from-label"> price</label><br>
+                <input type="number" name="listing[price]" value="<%= list.price %>" class="form-control"><br><br>
+                <div class="row">
+                    <div class="col-md-6 ">
+                        <label for="location" class="from-label"> location</label><br>
+                        <input type="text" name="listing[location]" value="<%= list.location %>"
+                            class="form-control">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="country" class="from-label"> country</label><br>
+                        <input type="text" name="listing[country]" value="<%= list.country %>"
+                            class="form-control">
+                    </div>
+                </div>
+                <br><br>
+                <button class="btn btn-success">Update</button>
+        </form>
+    </div>
+
 </body>
-</html>
