add & delete reviews

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <h2>Add List</h2>
 
-            <form class="col-lg-6 offset-lg-3 needs-validation" novalidate action="/" method="post">
+            <form class="col-lg-6 offset-lg-3 needs-validation" novalidate action="/add" method="post">
                 <label for="title" class="form-label"> title</label><br>
                 <input type="text" name="listing[title]" class="form-control" placeholder="Enter Your title" required>
                 <div class="invalid-feedback">Must Enter Title</div> <br>
