--- a/views/view.ejs
+++ b/views/view.ejs
@@ -3,7 +3,7 @@
   <body>
     <h2 class="mt-3">List Details</h2>
 
-    <div class="card mt-3 col-md-8 offset-md-2" style="">
+    <div class="card mt-3 col-md-8 offset-md-2">
       <img src="<%= list.image %>" class="card-img-top" alt="..." style="height: 30rem;">
       <div class="card-body">
         <h5 class="card-title">
