--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -9,6 +9,8 @@
             <div class="navbar-nav">
                 <a class="nav-link " href="/">Home</a>
                 <a class="nav-link" href="/add">Add List</a>
+                <a class="nav-link " href="/signup">Sign Up</a>
+                <a class="nav-link " href="/login">Log In</a>
                 <!-- <a class="nav-link" href="#">Pricing</a> -->
             </div>
         </div>
