--- a/views/add.ejs
+++ b/views/add.ejs
@@ -2,7 +2,7 @@
 
     <body>
         <div class="row">
-            <h2>Add List</h2>
+            <h2 class="mt-5">Add List</h2>
 
             <form class="col-lg-6 offset-lg-3 needs-validation" novalidate action="/add" method="post">
                 <label for="title" class="form-label"> title</label><br>
