--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -9,10 +9,20 @@
             <div class="navbar-nav">
                 <a class="nav-link " href="/">Home</a>
                 <a class="nav-link" href="/add">Add List</a>
-                <a class="nav-link " href="/signup">Sign Up</a>
-                <a class="nav-link " href="/login">Log In</a>
-                <!-- <a class="nav-link" href="#">Pricing</a> -->
             </div>
+
+            <div class="navbar-nav ms-auto">
+
+                <% if (!curUser) { %>                 
+                    <a class="nav-link mx-2 " href="/signup">Sign Up</a>
+                    <a class="nav-link mx-2 " href="/login">Log In</a>
+                <% } %>
+                <% if (curUser) { %>                 
+                    <a class="nav-link" href="/logout">Log Out</a>
+                <% } %>
+                
+            </div>
+            
         </div>
     </div>
 </nav>
