--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
 <h3 class="mt-5">Log In</h3>
 
 <form class="col-lg-6 offset-lg-3 needs-validation" novalidate action="/login" method="post">
-                <label for="username" class="form-label"> Log In</label><br>
+                <label for="username" class="form-label"> User Name </label><br>
                 <input type="text" name="username" class="form-control" id="username" required>
 
                 <label for="password" class="form-label"> Password</label><br>
