--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md bg-body-tertiary border-bottom sticky-top">
-    <div class="container-fluid">
+    <div class="container">
         <a class="navbar-brand" href="/"><i class="fa-regular fa-compass home"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             >
